kube/app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: enablo-spotify
  namespace: development
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: enablo-spotify
    spec:
      containers:
      - image: gcr.io/organic-palace-163910/enablo-spotify:1.0.3
        imagePullPolicy: Always
        name: enablo-spotify
        ports:
        - containerPort: 3000
