kube/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: enablo-spotify
  namespace: development
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: enablo-spotify
